# adv_smp

./: main.py  pyproject.toml
config/: GTH_POTENTIALS  apax.yaml  cp2k.yaml  md.yaml
src/: compare.py
